// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Field Test renders in case field not required and empty 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_not-required_not-started"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-fa-circle-o not-started-not-required-circle"
        title="Name"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field not required and error 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_not-required_error"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-fa-minus-circle error-circle"
        title="Name"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field not required and invalid 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_not-required_invalid"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-fa-minus-circle invalid-circle"
        title="Name"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field not required and passed 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_not-required_pass"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-fa-circle icon-grey pass-not-required-circle"
        title="Name"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field required and empty 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_required_not-started"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-required-o not-started-required-circle"
        title="Name"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field required and error 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_required_error"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-fa-minus-circle error-circle"
        title="Name"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field required and invalid 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_required_invalid"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-fa-minus-circle invalid-circle"
        title="Name"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field required and passed 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_required_pass"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-required icon-green pass-required-circle"
        title="Name - Required field complete"
      />
    </span>
  </span>
</div>
`;

exports[`Progress Field Test renders in case field status unknown 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_not-required_made-up"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <span>
        Status Unknown
      </span>
    </span>
  </span>
</div>
`;

exports[`Progress field navigation test single field navigate to edit a single field 1`] = `
<div>
  <span
    class="field-circle"
    data-testid="progress-field__name_null_required_pass"
  >
    <span
      class="progressField"
      data-testid="progress-field__name_link"
    >
      <i
        class="eui-icon eui-required icon-green pass-required-circle"
        title="Name - Required field complete"
      />
    </span>
  </span>
</div>
`;
